{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 248,
  "lineage": "5c561774-585e-4f1f-d159-4bd78bf75c25",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-vmnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvmrg/providers/Microsoft.Network/networkInterfaces/tstwvm01-nic",
            "internal_domain_name_suffix": "quywlcnk354eholhi1gzzqtxta.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "tstwvm01-priip",
                "primary": true,
                "private_ip_address": "10.1.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvmrg/providers/Microsoft.Network/publicIPAddresses/tstwvm01-pubip",
                "subnet_id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/virtualNetworks/tstvnet/subnets/Public_Subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "7C-1E-52-0F-0B-CD",
            "name": "tstwvm01-nic",
            "private_ip_address": "10.1.0.5",
            "private_ip_addresses": [
              "10.1.0.5"
            ],
            "resource_group_name": "tstvmrg",
            "tags": {
              "App_Owner": "xyz",
              "Owner": "Santosh Reddy",
              "Support_group": "CloudOps",
              "created_thru": "Terraform",
              "env": "Test"
            },
            "virtual_machine_id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvmrg/providers/Microsoft.Compute/virtualMachines/tstwvm01"
          },
          "dependencies": [
            "azurerm_public_ip.tf-vmpubip",
            "azurerm_resource_group.tf-vmrg",
            "azurerm_resource_group.tf-vnetrg",
            "azurerm_subnet.tf-sbt01",
            "azurerm_virtual_network.tf-vnet01"
          ]
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvmrg/providers/Microsoft.Network/networkInterfaces/tstwvm02-nic",
            "internal_domain_name_suffix": "quywlcnk354eholhi1gzzqtxta.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "tstwvm02-priip",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvmrg/providers/Microsoft.Network/publicIPAddresses/tstwvm02-pubip",
                "subnet_id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/virtualNetworks/tstvnet/subnets/Public_Subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "60-45-BD-E8-07-D9",
            "name": "tstwvm02-nic",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "tstvmrg",
            "tags": {
              "App_Owner": "xyz",
              "Owner": "Santosh Reddy",
              "Support_group": "CloudOps",
              "created_thru": "Terraform",
              "env": "Test"
            },
            "virtual_machine_id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvmrg/providers/Microsoft.Compute/virtualMachines/tstwvm02"
          },
          "dependencies": [
            "azurerm_public_ip.tf-vmpubip",
            "azurerm_resource_group.tf-vmrg",
            "azurerm_resource_group.tf-vnetrg",
            "azurerm_subnet.tf-sbt01",
            "azurerm_virtual_network.tf-vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tf-prsunsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/networkSecurityGroups/tstvnet_prsu_nsg",
            "location": "centralindia",
            "name": "tstvnet_prsu_nsg",
            "resource_group_name": "tstvnetrg",
            "security_rule": [],
            "tags": {
              "App_Owner": "xyz",
              "Owner": "Santosh Reddy",
              "Support_group": "CloudOps",
              "created_thru": "Terraform",
              "env": "Test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tf-vnetrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tf-pusunsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/networkSecurityGroups/tstvnet_pusu_nsg",
            "location": "centralindia",
            "name": "tstvnet_pusu_nsg",
            "resource_group_name": "tstvnetrg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.1.0.4/32",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AccessfrommyIP",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "49.43.224.23/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "App_Owner": "xyz",
              "Owner": "Santosh Reddy",
              "Support_group": "CloudOps",
              "created_thru": "Terraform",
              "env": "Test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tf-vnetrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tf-nsgin300",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.1.0.4/32",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/networkSecurityGroups/tstvnet_pusu_nsg/securityRules/AccessfrommyIP",
            "name": "AccessfrommyIP",
            "network_security_group_name": "tstvnet_pusu_nsg",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "tstvnetrg",
            "source_address_prefix": "49.43.224.23/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tf-pusunsg",
            "azurerm_resource_group.tf-vnetrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tf-vmpubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvmrg/providers/Microsoft.Network/publicIPAddresses/tstwvm01-pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.225.193.219",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "tstwvm01-pubip",
            "resource_group_name": "tstvmrg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "App_Owner": "xyz",
              "Owner": "Santosh Reddy",
              "Support_group": "CloudOps",
              "created_thru": "Terraform",
              "env": "Test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.tf-vmrg"
          ]
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvmrg/providers/Microsoft.Network/publicIPAddresses/tstwvm02-pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.225.193.222",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "tstwvm02-pubip",
            "resource_group_name": "tstvmrg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "App_Owner": "xyz",
              "Owner": "Santosh Reddy",
              "Support_group": "CloudOps",
              "created_thru": "Terraform",
              "env": "Test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.tf-vmrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-sbt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/28"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/virtualNetworks/tstvnet/subnets/Public_Subnet",
            "name": "Public_Subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tstvnetrg",
            "virtual_network_name": "tstvnet"
          },
          "dependencies": [
            "azurerm_resource_group.tf-vnetrg",
            "azurerm_virtual_network.tf-vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-sbt02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.16/28"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/virtualNetworks/tstvnet/subnets/Private_Subnet",
            "name": "Private_Subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tstvnetrg",
            "virtual_network_name": "tstvnet"
          },
          "dependencies": [
            "azurerm_resource_group.tf-vnetrg",
            "azurerm_virtual_network.tf-vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tf-prsunsgasso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/virtualNetworks/tstvnet/subnets/Private_Subnet",
            "network_security_group_id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/networkSecurityGroups/tstvnet_prsu_nsg",
            "subnet_id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/virtualNetworks/tstvnet/subnets/Private_Subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.tf-prsunsg",
            "azurerm_resource_group.tf-vnetrg",
            "azurerm_subnet.tf-sbt02",
            "azurerm_virtual_network.tf-vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tf-pusunsgasso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/virtualNetworks/tstvnet/subnets/Public_Subnet",
            "network_security_group_id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/networkSecurityGroups/tstvnet_pusu_nsg",
            "subnet_id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/virtualNetworks/tstvnet/subnets/Public_Subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.tf-pusunsg",
            "azurerm_resource_group.tf-vnetrg",
            "azurerm_subnet.tf-sbt01",
            "azurerm_virtual_network.tf-vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tf-vnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16",
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "89653185-efaa-43fc-b967-46cd9cc27798",
            "id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/virtualNetworks/tstvnet",
            "location": "centralindia",
            "name": "tstvnet",
            "resource_group_name": "tstvnetrg",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/28",
                "id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/virtualNetworks/tstvnet/subnets/Public_Subnet",
                "name": "Public_Subnet",
                "security_group": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/networkSecurityGroups/tstvnet_pusu_nsg"
              },
              {
                "address_prefix": "10.1.0.16/28",
                "id": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/virtualNetworks/tstvnet/subnets/Private_Subnet",
                "name": "Private_Subnet",
                "security_group": "/subscriptions/74bf1a8c-e1f3-43af-b9bf-b67e2cf12d8f/resourceGroups/tstvnetrg/providers/Microsoft.Network/networkSecurityGroups/tstvnet_prsu_nsg"
              }
            ],
            "tags": {
              "App_Owner": "xyz",
              "Owner": "Santosh Reddy",
              "Support_group": "CloudOps",
              "created_thru": "Terraform",
              "env": "Test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.tf-vnetrg"
          ]
        }
      ]
    }
  ]
}